deployment/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poke-go-backend-ingress
  annotations:
    # SSL/TLS will be handled manually or through cloud provider
spec:
  ingressClassName: nginx
  rules:
    - host: api.justpokefriends.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poke-go-backend
                port:
                  number: 8080
    - host: dev.api.justpokefriends.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poke-go-backend
                port:
                  number: 8080
